@@ -20,6 +20,8 @@ Release 0.8.7
 - added new setting 'invalidSessionPage' (default is FILENAME_COOKIE_USAGE)
 - fixed bug to show a session/cookie required page if neccessary; #1836136
 - moved tax rate from ZMShippingProvider to ZMShippingMethod
+- add method to ZMShippingProviders that allows to calculate shipping for a
+  given address
 
 Release 0.8.6.1
 - fix hardcoded tablename in ZMBanners; #1856664
